--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ngrx/effects": "^8.3.0",
     "@ngrx/store": "^8.3.0",
+    "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
+    "ng-animate": "^0.3.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
