--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,11 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ]
   },
   "storage": {
     "rules": "storage.rules"
